[gd_scene load_steps=15 format=3 uid="uid://cixecxr0ua04x"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_uksyg"]
[ext_resource type="Shader" path="res://scenes/enemy/flash.gdshader" id="2_71xl1"]
[ext_resource type="Texture2D" uid="uid://chovb317rkgg3" path="res://scenes/enemy/enemy_.png" id="3_t682e"]
[ext_resource type="AudioStream" uid="uid://c2t4ykidlnpog" path="res://scenes/enemy/explosion(1).wav" id="4_dsj62"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i7p6l"]
resource_local_to_scene = true
shader = ExtResource("2_71xl1")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nrksc"]
radius = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_22i56"]
radius = 24.1868

[sub_resource type="Animation" id="Animation_pc8ml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7l1on"]
resource_name = "hit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.8, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6torh"]
_data = {
"RESET": SubResource("Animation_pc8ml"),
"hit": SubResource("Animation_7l1on")
}

[sub_resource type="Curve" id="Curve_nqtdg"]
_data = [Vector2(0.00561798, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_mt05a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_segk7"]
resource_name = "walk"
length = 0.6333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_geeqy"]
_data = {
"RESET": SubResource("Animation_mt05a"),
"walk": SubResource("Animation_segk7")
}

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 0
script = ExtResource("1_uksyg")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_i7p6l")
texture = ExtResource("3_t682e")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-5, 9)
shape = SubResource("CircleShape2D_nrksc")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-13, 13)
shape = SubResource("CircleShape2D_22i56")
debug_color = Color(0.979795, 0, 0.38508, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6torh")
}

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.5
one_shot = true
explosiveness = 1.0
particle_flag_align_y = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 450.0
scale_amount_min = 15.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_nqtdg")
color = Color(0.704977, 0.478516, 0.942382, 1)

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dsj62")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_geeqy")
}
autoplay = "walk"

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="finished" from="DeathParticles" to="." method="_on_cpu_particles_2d_finished"]
